feat: add ACPConversation (#189)
Relates to coder/internal#1333

Adds ACPConversation type to agentapi server
